WebHelpers ChangeLog

0.6.3 (tip)

0.6.2 (10/2/2008)
* nl2br() and format-paragraphs were not literal-safe.
* webhelpers.converters:
  - New helper transpose() to turn a 2D list sideways (making the rows columns
    and the columns rows).
* webhelpers.markdown:
  - Upgrade to Markdown 1.7.
  - Add a warning about escaping untrusted HTML to 
    webhelpers.html.converters.markdown() docstring.
  - Did not include Markdown's extensions due to relative import issues.
    Use the full Markdown package if you want footnotes or RSS.
* webhelpers.media:
  - New module for muiltimedia helpers.  Initial functions determine the size
    of an image and choose a scaling factor.
* webhelpers.html.tags:
  - Options tuple contains Option objects for select/checkbox/radio groups.
    select() now uses this automatically.
  - checkbox() and radio() now have a ``label`` argument.
* webhelpers.number:
  - Population standard deviation contributed by Lorenzo Catucci.
* webhelpers.html.form_layout: form field layout (PRELIMINARY, UNSTABLE).

0.6.1 (7/31/2008)
* Include a faster version of cgi.escape for use by the literal object.
* Fixed bug in SimplerXMLGenerator that the FeedGenerator uses, so that
  it doesn't use a {} arg.
* New helpers:
  - nl2br() and format_paragraphs() in webhelpers.html.converters.
  - ul() and ol() in webhelpers.html.tags.
  - series() in webhelpers.text.
* HTML.tag() is a synonym for make_tag(), both in webhelpers.html.builder.
* Change default form method to "post" (rather than "POST") to conform to XHTML.
* Add DeprecationWarning for webhelpers.rails package,
  webhelpers.rails.url_for(), and webhelpers.pagination.

0.6 (07/08/2008)
* Add webhelpers.html.builder to generate HTML tags with smart escaping,
  along with a literal type to mark preformatted strings.
* Deprecate webhelpers.rails, including its Javascript libraries (Prototype
  and Scriptaculous).  Wrap all rails helpers in a literal.
* Many new modules: